[package]
name = "app2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
crossbeam-channel = "0.5"
ntest = "0.8"

[[bin]]
name = "app2"
path = "src/main.rs"

[lib]
name = "solution"
path = "src/solution.rs"
